2008-08-07  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.TextEditor.mdp, Makefile.am: Updated.
	* Mono.TextEditor/Margin.cs, Mono.TextEditor/FoldMarkerMargin.cs,
	  Mono.TextEditor/TextEditor.cs, Mono.TextEditor/GutterMargin.cs,
	  Mono.TextEditor/TextViewMargin.cs, Mono.TextEditor/IMargin.cs:
	  Merged IMargin and AbstractMargin into a new Margin class. Methods
	  for handling mouse events are now internal, and new public events
	  have been added.
	* Mono.TextEditor/TextMarker.cs, Mono.TextEditor/LineSegment.cs,
	  Mono.TextEditor/IconMargin.cs, Mono.TextEditor/BookmarkMargin.cs,
	  Mono.TextEditor/BookmarkMarker.cs: Renamed BookmarkMargin into
	  IconMargin. Moved code for handling bookmarks to the new
	  BookmarkMarker. Allow IIconBarMarker objects to handle mouse
	  events.

2008-08-05  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.TextEditor/Document.cs, Mono.TextEditor/TextEditorData.cs,
	  Mono.TextEditor/TextEditor.cs, gtk-gui/objects.xml: Added delegate
	  which is called to check if a line is read-only. Removed ReadOnly
	  property from TextEditor since it is not used anymore (it was moved
	  to Document).

2008-07-22  Jeffrey Stedfast  <fejj@novell.com>

	* Mono.TextEditor/DefaultEditActions.cs (DeleteCaretLineToEnd):
	Mimic Emacs behavior when the cursor is in the last column of the
	line.

2008-07-18  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextViewMargin.cs: Fixed visual --> document location
	  bug in lines with open foldings.

2008-07-15  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor.Highlighting/SyntaxModeService.cs: fixed "Bug 408896
	  - Text editor: cannot insert apostrophe, parentheses, etc in text
	  files".

2008-07-14  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/Document.cs, Mono.TextEditor/BufferedTextReader.cs:
	  Added System.IO.TextReader support for the text buffer.

2008-07-14  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextViewMargin.cs: fixed 'Bug 385456 - Code folding'.
