@@ -645,9 +645,28 @@ namespace Mono.TextEditor
 			
 			string newLine = data.Document.EolMarker;
 			int caretColumnOffset = 0;
+			LineSegment line = data.Document.GetLine (data.Caret.Line);
+			
+			if (data.Options.RemoveTrailingWhitespaces) {
+				int whitespaces = 0;
+				for (int i = line.EditableLength - 1; i >= 0 ; i--) {
+					if (Char.IsWhiteSpace (data.Document.GetCharAt (line.Offset + i))) {
+						whitespaces++;
+					} else {
+						break;
+					}
+				}
+
+				
+				if (whitespaces > 0) {
+					int offset = line.Offset + line.EditableLength - whitespaces;
+					if (data.Caret.Offset >= offset)
+						data.Caret.Offset -= whitespaces;
+					data.Document.Remove (offset, whitespaces);
+				}
+			}
 			
 			if (data.Options.AutoIndent) {
-				LineSegment line = data.Document.GetLine (data.Caret.Line);
 				int i;
 				for (i = 0; i < line.EditableLength; i++) {
 					char ch = data.Document.GetCharAt (line.Offset + i);
